# OhCanvas

./: .env  .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.claude/: launch.json
.commandcode/taste/: taste.md
.github/workflows/: generate-update-json.mjs  release.yml
4ZDsa/icon.appiconset/: Contents.json
docs/: demo-v01.md
sidecar/: package.json  tsconfig.json
sidecar/src/: canvas-actions.test.ts  canvas-actions.ts  conductor-action.test.ts  conductor-action.ts  external-agent.ts  index.ts  orchestrator.ts  protocol.ts  stt.ts  terminal-commands.test.ts  terminal-commands.ts  terminals.test.ts  terminals.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/tauri-plugin-llm/: Cargo.toml  build.rs
src-tauri/tauri-plugin-llm/examples/: smoke.rs
src-tauri/tauri-plugin-llm/permissions/: default.toml
src-tauri/tauri-plugin-llm/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-llm/permissions/autogenerated/commands/: is_ready.toml
src-tauri/tauri-plugin-llm/permissions/schemas/: schema.json
src-tauri/tauri-plugin-llm/src/: error.rs  inference.rs  lib.rs  llm.rs  model.rs
src/bridge/: protocol.ts  sidecar.ts
src/canvas/: Canvas.tsx  nodes.ts  types.ts
src/canvas/annotations/: AnnotationOverlay.tsx  useAnnotations.ts
src/canvas/nodes/: BrowserNode.tsx  NoteNode.tsx  ShapeNode.tsx  (+3 more)
src/state/: persistence.ts  store.ts
src/ui/: CommandBar.tsx  ConnectionStatus.tsx  Navbar.tsx  PreviewDock.tsx  PreviewSuggestionToast.tsx  SpotifyPlayer.tsx  WorkspaceSwitcher.tsx  backgrounds.ts  cliOptions.ts  icons.tsx  llm.ts  mediaProviders.ts  projectFolders.ts  themes.ts  voice.ts  workspacePicker.ts
stt/: Info.plist  build.sh  main.swift  stt-helper-debug
stt/_CodeSignature/: CodeResources
(+3 files in other folders)
